--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,2 +1,14 @@
 @import "tailwindcss";
 
+:root {
+  --primary-color: #cb1bab; 
+  --secondary-color: #F59E0B; 
+  --accent-color: #10B981; 
+  --background-color: #F3F4F6; 
+  --text-color: #13ac2a; 
+}
+
+body {
+  background-color: var(--background-color);
+  color: var(--text-color);
+}
